--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
 <% end %>
 
 <%= render partial: "gamers/shared/navbar" %>
+<%= javascript_include_tag "application" %>
+<%= yield :javascript_includes %>
+
 <%= yield %>
 
 </body>
