Create basic functions such as Create and Show games

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,2 +1,9 @@
-<%= @game.name%>
-<%= @game.description%>
+<div>
+	<div>
+	Nome:	<%= @game.name%>
+	</div>
+	<div>
+	<br>
+	Descricao:	<%= @game.description%>
+	</div>
+</div>
