Display images and create basic views

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -6,4 +6,14 @@
 	<br>
 	Descricao:	<%= @game.description%>
 	</div>
+	<div>
+	<br>
+	<tbody>
+		<%@images.each do |image|%>
+		<tr>
+			<th><%=image_tag(image)%></th>
+		</tr>
+		<%end%>
+	</tbody>
+	</div>
 </div>
