--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,18 +1,19 @@
-<h1>Cadastrar Jogo</h1>
+<h1>Register Game</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@game) do |f| %>
-      <%= f.label "Url do jogo" %>
+      <%#render 'shared/error_messages'%>
+      <%= f.label "Url" %>
       <%= f.url_field :url %>
 
       <%= f.label "Engine" %>
       <%= f.text_field :engineName %>
 
-      <%= f.label "Ano" %>
+      <%= f.label "Year" %>
       <%= f.text_field :year %>
 
-      <%= f.submit "Cadastrar jogo", class: "btn btn-primary" %>
+      <%= f.submit "Submit", class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
