--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,10 @@
 </head>
 <body>
 
+<% flash.each do |name, message| %>
+ <%= content_tag :div, message, class: "alert altert-#{name}" %>
+<% end %>
+
 <%= yield %>
 
 </body>
