--- a/app/views/game_jams/new.html.erb
+++ b/app/views/game_jams/new.html.erb
@@ -1,6 +1,6 @@
-<h1>Register new Game Jam event</h1>
 
 <%= form_for @game_jam do |f| %>
+<!-- 
 	<%= f.text_field :theme, :placeholder => 'Theme' %> <br />
 	<%= f.date_field :date %> <br />
 	<%= f.text_field :version, :placeholder => 'Version' %> <br />
@@ -8,4 +8,6 @@
 	<%= f.check_box :online, :id => 'online_confirm'%> <br />
 	<%= f.text_field :location, :placeholder => 'Location', :id => 'location_field' %> <br />
 	<%= f.submit 'Submit' %>
+ -->	
+ <%=render partial: "game_jams/shared/gamejam_registration"%>
 <% end %>
