New password layout

--- a/app/views/gamers/shared/_newpassword.html.erb
+++ b/app/views/gamers/shared/_newpassword.html.erb
@@ -11,23 +11,27 @@
                   <p>You can reset your password here.</p>
                   <div class="panel-body">
     
-                    <form id="register-form" role="form" autocomplete="off" class="form" method="post">
-    
-                      <div class="form-group">
-                        <div class="input-group">
-                          <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
-                          <input id="email" name="email" placeholder="email address" class="form-control"  type="email">
-                        </div>
-                      </div>
+                  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+                        <%= devise_error_messages! %>
 
-                    
-                      <div class="actions">
-                       <input name="recover-submit" class="btn btn-lg btn-primary btn-block" value="Reset Password" type="submit">
-                      </div>
+                     <form id="register-form" role="form" autocomplete="off" class="form" method="post">
+      
+                        <div class="form-group">
+                          <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
+                            <%= f.email_field :email, autofocus: true,class:"form-control" %>
+                          </div>
+                        </div>
 
                       
-                      <input type="hidden" class="hide" name="token" id="token" value=""> 
-                    </form>
+                        <div class="actions">
+                         <%= f.submit "Submit" , class:"btn btn-lg btn-primary btn-block"%>
+                        </div>
+
+                        <input type="hidden" class="hide" name="token" id="token" value=""> 
+                      </form>
+                      <%= render "gamers/shared/links" %>
+                <% end %>
     
                   </div>
                 </div>
