--- a/app/views/gamers/passwords/new.html.erb
+++ b/app/views/gamers/passwords/new.html.erb
@@ -1,14 +1,18 @@
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
 
-  <!-- <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+	                    <%= render "gamers/shared/links" %>
+	                    <%=render partial:"gamers/shared/newpassword"%>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div> -->
-<%= render partial: "gamers/shared/newpassword"%>
-<%= render "gamers/shared/links" %>
-<% end %>
+<!-- # <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+#   <%= devise_error_messages! %>
+
+#   <div class="field">
+#     <%= f.label :email %><br />
+#     <%= f.email_field :email, autofocus: true,class:"form-control" %>
+#   </div>
+
+#   <div class="actions">
+#     <%= f.submit "Send me reset password instructions" , class:"btn btn-lg btn-primary btn-block"%>
+#   </div>
+
+# <%= render "gamers/shared/links" %>
+# <% end %> -->
