--- a/app/views/gamers/shared/_signup.html.erb
+++ b/app/views/gamers/shared/_signup.html.erb
@@ -1,3 +1,5 @@
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <%= devise_error_messages! %>
 <div class="container">
   <div class="row">
         <form class="form-horizontal">
@@ -6,52 +8,55 @@
 <!-- Form Name -->
 <legend>Jump in</legend>
 
-<!-- Text input-->
-<div class="form-group">
-  <label class="col-md-4 control-label" for="textinput">User Name</label>  
-  <div class="col-md-4">
-  <input id="textinput" name="textinput" placeholder="Insert your User Name" class="form-control input-md" required="" type="text">
-  <span class="help-block"> </span>  
-  </div>
-</div>
+  <!-- Text input-->
+  <div class="form-group">
+    <label class="col-md-4 control-label" for="textinput">User Name</label>  
+    <div class="col-md-4">
+    <%= f.text_field :name, autofocus: true,placeholder:"Insert your User Name", class:"form-control input-md" %>
+    </div>
+  </div></br>
 
-<!-- Text input-->
-<div class="form-group">
-  <label class="col-md-4 control-label" for="textinput">Email</label>  
-  <div class="col-md-4">
-  <input id="textinput" name="textinput" placeholder="Insert your Email" class="form-control input-md" required="" type="text">
-  <span class="help-block"> </span>  
-  </div>
-</div>
+  <!-- Text input-->
+  <div class="form-group">
+    <label class="col-md-4 control-label" for="textinput">Email</label>  
+    <div class="col-md-4">
+     <%= f.email_field :email, autofocus: true, class:"form-control input-md" %>
+    
+    </div>
+  </div></br>
 
-<!-- Text input-->
-<div class="form-group">
-  <label class="col-md-4 control-label" for="textinput">Password</label>  
-  <div class="col-md-4">
-  <input id="textinput" name="textinput" placeholder="Insert your Password" class="form-control input-md" required="" type="password">
-  <span class="help-block"> </span>  
-  </div>
-</div>
 
-<!-- Text input-->
-<div class="form-group">
-  <label class="col-md-4 control-label" for="textinput">Confirm Password</label>  
-  <div class="col-md-4">
-  <input id="textinput" name="textinput" placeholder="Confirm your Password" class="form-control input-md" required="" type="password">
-  <span class="help-block"> </span>  
-  </div>
-</div>
+  <!-- Text input-->
+  <div class="form-group">
+    <label class="col-md-4 control-label" for="textinput">Password</label>  
+    <div class="col-md-4">
+    <% if @minimum_password_length %>
+      <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %>
+      <%= f.password_field :password, autocomplete: "off", class:"form-control input-md" %>
+    </div>
+  </div></br>
 
-<!-- Button -->
-<div class="form-group">
-  <label class="col-md-4 control-label" for="singlebutton"> </label>
-  <div class="col-md-4">
-    <button id="singlebutton" name="singlebutton" class="btn btn-primary">Submit</button>
-  </div>
-</div>
+  <!-- Text input-->
+  <div class="form-group">
+    </br>
+<label class="col-md-4 control-label" for="textinput">Confirm Password</label>  
+    <div class="col-md-4">
+     <%= f.password_field :password_confirmation, autocomplete: "off", class:"form-control input-md"%>
+    </div>
+  </div></br>
 
+
+  <!-- Button -->
+  <div class="form-group">
+    <label class="col-md-4 control-label" for="singlebutton"> </label>
+    <div class="col-md-4">
+       <%= f.submit "Sign up" ,class:"btn btn-primary"%>
+    </div>
+  </div>
 </fieldset>
 </form>
   
   </div>
 </div>
+<% end %>
