--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,2 +1,36 @@
-<h1>Games#index</h1>
-<p>Find me in app/views/games/index.html.erb</p>
+  <!-- the reason for the tabindex is to support webkit //-->
+  <div class="css-slider-mask">
+    <!-- there are a number of add on modules which are demo-able by the javascript checkboxes added to this example page //-->
+    <ul class="css-slider with-responsive-images with-selection-disabled with-reflection with-fade-in">
+      <% Game.all().each do |game| %>
+        <li class="slide" tabindex="1" id="l1">
+          <span class="slide-outer">
+            <span class="slide-inner">
+              <!-- each slide-gfx needs a unique id if you wish to use reflections, you will also need to update .with-reflection in core.css //-->
+              <span class="slide-gfx" id="s1">
+                <%= image_tag(getImages(game.url)[0]) %>
+              </span>
+            </span>
+          </span>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+<!-- This has been added here because mask: only supports same-domain requests //-->
+<svg version="1.1" xmlns="http://www.w3.org/2000/svg">
+  <defs>
+    <linearGradient gradientUnits="objectBoundingBox" id="gradient" x2="0" y2="1">
+      <stop stop-color="rgba(0,255,255,0.00)" offset="0.0"/>
+      <stop stop-color="rgba(0,255,255,0.30)" offset="0.5"/>
+      <stop stop-color="rgba(0,255,255,1.00)" offset="1.0"/>
+    </linearGradient>
+    <radialGradient id="gradient2">
+        <stop offset="10%" stop-color="rgba(255,255,255,1)"/>
+        <stop offset="100%" stop-color="rgba(255,255,255,0)"/>
+    </radialGradient>
+    <mask id="mask" maskUnits="objectBoundingBox" maskContentUnits="objectBoundingBox" x="0" y="0" width="100%" height="100%">
+      <ellipse fill="url(#gradient2)" cx="0" cy="1" rx="1" ry="0.8"/>
+      <ellipse fill="url(#gradient2)" cx="1" cy="1" rx="1" ry="0.8"/>
+    </mask>
+  </defs>
+</svg>
