Create user and Create session helper

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
  <%= content_tag :div, message, class: "alert altert-#{name}" %>
 <% end %>
 
-<%= render partial: "gamers/shared/navbar" %>
+<%#= render partial: "gamers/shared/navbar" %>
 <%= javascript_include_tag "application" %>
 <%= yield :javascript_includes %>
 
