--- a/app/views/game_jams/shared/_gamejam_registration.html.erb
+++ b/app/views/game_jams/shared/_gamejam_registration.html.erb
@@ -1,7 +1,3 @@
-
-<div style="background-image: url(game_jam/shared/gamejamevent.jpg);">
-  
-
 <div class="container">
   <div class="row">
         <form class="form-horizontal">
@@ -12,6 +8,7 @@
 
 <!-- Text input-->
 
+<%= form_for @game_jam do |f| %>
 <div class="container" >
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
@@ -21,21 +18,26 @@
                     <form role="form" method="post" action="" accept-charset="UTF-8">
                     
                         <label for="fname">Game Jam Theme</label>
-                        <input type="text" id="fname" class="form-control" name="fname" placeholder="">
+                        <!-- <input type="text" id="fname" class="form-control" name="fname" placeholder=""> --> <%= f.text_field :theme, :placeholder => 'Theme',class:"form-control"%></br>
 
                         <label for="fname">Date</label>
-                        <input type="date" id="date" class="form-control" name="date" placeholder="21/21/2021">
+                        <!-- <input type="date" id="date" class="form-control" name="date" placeholder="21/21/2021"> --><%= f.date_field :date,class:"form-control" %></br>
                         
                         <label for="lname">Version</label>
-                        <input type="text" id="lname" class="form-control" name="lname">
-                        
+                        <!-- <input type="text" id="lname" class="form-control" name="lname"> -->
+                        <%= f.text_field :version, :placeholder => 'Version',class:"form-control"  %></br>
                         <label> 
-                            <input type="checkbox"  id="online_confirm"><strong> Online</strong>
+                            <!-- <input type="checkbox"  id="online_confirm"><strong> Online</strong> -->
+                            <%= f.check_box :online, :id => 'online_confirm'%><strong> Online</strong> <br />
                         </label></br>
                         
-                        <input type="text" id="location_field" class="form-control" placeholder="Location" style="margin-bottom: 12px">
+                        <!-- <input type="text" id="location_field" class="form-control" placeholder="Location" style="margin-bottom: 12px"> -->
+
+                            <%= f.text_field :location, :placeholder => 'Location', :id => 'location_field',class:"form-control" %>
                         
-                        <center><input type="submit" class="btn btn-primary m-t-10" id="submitbtn" name="submit" value="Create"></center>
+                        <center> <!-- <input type="submit" class="btn btn-primary m-t-10" id="submitbtn" name="submit" value="Create"> -->  <%= f.submit 'Submit',class:"btn btn-primary m-t-10" %>
+</center>
+<% end %>
                         
                     </form>
                 </div>
