--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,5 +3,11 @@
     <h1>
       <%= @user.name %>
     </h1>
+    <% if current_user?(@user) %>
+    	<%= link_to "delete", @user, method: :delete,
+                                  data: { confirm: "You sure?" } %>
+  <% end %>
   </aside>
+    
+
 </div>
