--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -1,3 +1,4 @@
+<!-- 
 <% @organizations.each do |o| %>
 	<br /><%= o.name %></p>
 	<p>Site: <%= o.site %></p>
@@ -6,3 +7,31 @@
 	<%= link_to "Add new Game Jam event for this organization", new_game_jam_path %> <br/>
 <% end %>
 <br /><%= link_to "Add new Game Jam Organization", new_organization_path %>
+
+ -->
+<div class="container">
+    <div class="row">
+        <div class="col-md-8">
+            <div class="page-header">
+                <h1>Organizations </h1>
+            </div>
+
+            <div class="comments-list">
+				<% @organizations.each do |o| %>
+
+					<div class="media">
+				        <p class="pull-right"><small>Location: <%= o.localization %></small></p>
+				            <div class="media-body">
+				            <h3></h3>
+				            	<h4 class="media-heading user_name">Name: <%= o.name %></h4>
+				            	Description: <%= o.description %>
+				                <p><small>Site: <%= o.site %></small></p>
+				            </div>
+				    </div>
+				<% end %>
+			 </div>
+        </div>
+    </div>
+</div>
+<br /><%= link_to "Add new Game Jam Organization", new_organization_path %>
+
