--- a/app/views/organizations/new.html.erb
+++ b/app/views/organizations/new.html.erb
@@ -1,9 +1,21 @@
 <h1>Register new Organization</h1>
 
-<%= form_for @organization do |f| %>
-	<%= f.text_field :name, :placeholder => 'Name' %> <br />
-	<%= f.text_field :site, :placeholder => 'Site' %> <br />
-	<%= f.text_area :description, :placeholder => 'Description' %> <br />
-	<%= f.text_field :localization, :placeholder => 'Localization' %> <br />
-	<%= f.submit 'Submit' %>
-<% end %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for(@organization) do |f| %>
+      <%= f.label :name %>
+	  <%= f.text_field :name, :placeholder => 'Name', class: 'form-control' %><br />
+
+      <%= f.label :site %>
+      <%= f.text_field :site, :placeholder => 'Site', class: 'form-control' %><br />
+
+      <%= f.label :description %>
+      <%= f.text_area :description, :placeholder => 'Description', class: 'form-control' %><br />
+
+      <%= f.label :localization %>
+      <%= f.text_field :localization, :placeholder => 'Localization', class: 'form-control' %><br />
+      <%= f.submit 'Submit' , class: "btn btn-primary"%>
+    <% end %>
+  </div>
+</div>
+
