--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,12 +8,12 @@
 </head>
 <body>
 
-<% flash.each do |name, message| %>
- <%= content_tag :div, message, class: "alert altert-#{name}" %>
-<% end %>
-
 <%#= render partial: "gamers/shared/navbar" %>
 <%= render partial: "shared/navbar" %>
+
+<% flash.each do |name, message| %>
+ <%= content_tag :div, message, class: "alert-danger" %>
+<% end %>
 
 <%= javascript_include_tag "application" %>
 <%= yield :javascript_includes %>
