--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -13,13 +13,14 @@
 
   <div class="field">
     <%= f.label :field %><br>
-    <%= f.text_field :field %>
+    <%= f.text_area :field, class: 'form-control' %>
   </div>
   <div class="field">
     <%= f.label :rate %><br>
-    <%= f.number_field :rate %>
+    <%= f.number_field :rate, class: 'form-control' %>
+
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Submit', class: 'btn btn-primary m-t-10' %>
   </div>
 <% end %>
