failues, failures and more failures...

--- a/app/views/game_jams/index.html.erb
+++ b/app/views/game_jams/index.html.erb
@@ -9,12 +9,12 @@
 				<% @game_jams.each do |g| %>
 
 					<div class="media">
-				        <p class="pull-right"><small>Date: <%= g.date %></small></p>
+				        <p class="pull-right"><small>Date: <%#= g.date %></small></p>
 				        <!-- <a class="media-left" href="#">
                               <img src="http://lorempixel.com/40/40/people/1/">
                             </a> -->
 				            <div class="media-body">
-				            	<h4 class="media-heading user_name">Theme: <%= g.theme %></h4>
+				            	<h4 class="media-heading user_name">Themeeee: <%= g.theme %></h4>
 				                Version: <%= g.version %>
 				                <p><small>Location: <%= g.location %></small></p>
 				            </div>
