Create list game jams from an organization

--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -6,5 +6,7 @@
 <p>Description: <%= @organization.description%></p>
 <p>Location: <%= @organization.localization%></p>
 <%= link_to "Add new Game Jam event for this organization", new_game_jam_path %>
+<%= link_to "View all Game Jams event for this organization", '/organizations/show_jams' %>
+
 	</aside>
 </div>
