--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -4,7 +4,7 @@
 	</div>
 	<div>
 	<br>
-	Descricao:	<%= @game.description%>
+	Descricao:	<%= simple_format @game.description%>
 	</div>
 	<div>
 	<br>
