Add references game to gamejams

--- a/app/views/organizations/show_jams.html.erb
+++ b/app/views/organizations/show_jams.html.erb
@@ -19,6 +19,7 @@
 				                <p><small>Location: <%= g.location %></small></p>
 				            </div>
 				    </div>
+				    <%= link_to "Select this Game Jam", game_jam_path(g) %> <br/>
 					<!-- <p>Theme: <%= g.theme %></p>
 					<p>Date: <%= g.date %></p>
 					<p>Version: <%= g.version %></p>
