--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -642,3 +642,72 @@ body:nth-child(2) .css-slider {
 @-ms-keyframes css-slideshow-shadow     { from { opacity: 0.1; } to { opacity: 0.7; } }
 @-o-keyframes css-slideshow-shadow      { from { opacity: 0.1; } to { opacity: 0.7; } }
 @keyframes css-slideshow-shadow         { from { opacity: 0.1; } to { opacity: 0.7; } }
+
+$background-color: #F0F0F0;
+
+body {
+  background-color: $background-color;
+}
+
+.main {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+h1 {
+  font-family: sans-serif;
+}
+
+.vote {
+  border: none;
+  background-color: $background-color; 
+  width: 47px;
+  height: 21.5px;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  
+  &:active {
+    outline: none;
+    border: none;
+  }
+  
+  &:focus {
+    outline: 0;
+  }
+}
+
+.upArrow {
+  x: 0px;
+  y: 0px;
+  enable-background: new 0 0 11.5 6.4;
+  path {
+    fill: #BBBBBB;
+    fill-rule: evenodd;
+    clip-rule: evenodd;
+    margin: 0;
+  }
+}
+
+.downArrow {
+  x: 0px;
+  y: 0px;
+  enable-background: new 0 0 11.5 6.4;
+  path {
+    fill-rule: evenodd;
+    clip-rule: evenodd;
+    fill: #BBBBBB;
+  }
+}
+
+#upButton :hover {
+  fill: #6CC576;
+  cursor: pointer;
+}
+
+#downButton :hover {
+  fill: #FF586C;
+  cursor: pointer;
+}
