--- a/app/views/game_jams/show.html.erb
+++ b/app/views/game_jams/show.html.erb
@@ -7,7 +7,7 @@
 <p>Online: <%= @gamejam.online%></p>
 <p>Location: <%= @gamejam.location%></p>
 <%= link_to "Add new Game for this gamejam", new_game_path %>
-<%= link_to "View all Games for this gamejam", '/game_jams/show_games' %>
+<%= link_to "View all Games for this gamejam", '/games/show_games' %>
 
 	</aside>
 </div>
