--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -15,7 +15,7 @@
         <%= f.label "Year" %>
         <%= f.text_field :year %>
 
-        <%= f.select :game_jam_id , options_for_select(@game_jams)%>
+        <%= f.select :game_jam_id , options_for_select(@game_jams), required: true%>
 
         <%= f.submit "Submit", class: "btn btn-primary" %>
       <% end %>
