--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,9 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
       <ul class="nav navbar-nav navbar-right">
-      <li><%=link_to "Organization", organizations_index_path%></li>
+      <%if logged_in?%>
+        <li><%=link_to "Organization", organizations_index_path%></li>
+      <%end%>
         <li id="fat-menu" class="dropdown">
           <a href="#" class="dropdown-toggle" data toggle="dropdown">
               Games <b class="caret"></b>
